--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "username": "mairandomness",
-    "repositoryName": "blog",
+    "repositoryName": "mairnadomblog.github.io",
     "branch": "gh-pages"
   },
   "theme": {
