--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -26,9 +26,9 @@
   },
   "site": {
     "title": "My pc, my cats and me",
-    "description": "Blog about my journey learning programming and my life in general",
+    "description": "Blog about my journey learning things and surviving life in general",
     "logo": "https://raw.githubusercontent.com/mairandomness/randomblog/gh-pages/images/pixelcat.png",
-    "cover": "pcandcats.jpg",
+    "cover": "https://raw.githubusercontent.com/mairandomness/randomblog/gh-pages/images/pcandcats.jpg",
     "delay": "",
     "postsPerPage": "",
     "googleAnalytics": "",
