Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -36,8 +36,8 @@
   },
   "socialnetwork": {
     "email": "",
-    "github": "mairandomness",
-    "twitter": "mairandomness",
+    "github": "@mairandomness",
+    "twitter": "@mairandomness",
     "facebook": "",
     "googleplus": "",
     "instagram": "",
