Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -36,14 +36,14 @@
   },
   "socialnetwork": {
     "email": "",
-    "github": "@mairandomness",
-    "twitter": "@mairandomness",
+    "github": "https://github.com/mairandomness",
+    "twitter": "https://twitter.com/maiRandomness",
     "facebook": "",
     "googleplus": "",
     "instagram": "",
     "pinterest": "",
     "flickr": "",
-    "linkedin": "",
+    "linkedin": "https://www.linkedin.com/in/maira-kodama-1b494550/",
     "stackoverflow": ""
   }
 }
