Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -36,8 +36,8 @@
   },
   "socialnetwork": {
     "email": "",
-    "github": "https://github.com/mairandomness",
-    "twitter": "https://twitter.com/maiRandomness",
+    "github": "https://github.com/mairandomness/",
+    "twitter": "https://twitter.com/maiRandomness/",
     "facebook": "",
     "googleplus": "",
     "instagram": "",
