Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -35,7 +35,7 @@
     "disqus": ""
   },
   "socialnetwork": {
-    "email": "",
+    "email": "mairandomness@gmail.com",
     "github": "https://github.com/mairandomness/",
     "twitter": "https://twitter.com/maiRandomness/",
     "facebook": "",
