--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -6,7 +6,7 @@
     "cname": ""
   },
   "theme": {
-    "name": "casper"
+    "name": "saga"
   },
   "urls": {
     "site": "https://mairandomness.github.io/randomblog",
