Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -43,7 +43,7 @@
     "instagram": "",
     "pinterest": "",
     "flickr": "",
-    "linkedin": "https://www.linkedin.com/in/maira-kodama-1b494550/",
+    "linkedin": "",
     "stackoverflow": ""
   }
 }
