Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -22,6 +22,10 @@
       null,
       null,
       null
+    ],
+    "_compiled": true,
+    "beforeCreate": [
+      null
     ]
   },
   "site": {
